fixed №2